--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "deepl-node": "^1.14.0",
+    "googleapis": "^144.0.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
